test/errors/type/io/open2.yasl
let f = io.open(1, 'w')
